--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+  
 </ion-header>
 
 <ion-content [fullscreen]="true">
@@ -14,7 +10,12 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-card>
+      <img src="assets/img/pedro.jpg">>
+      <ion-card-header>
+        <ion-card-title>Pedro Arthur Oliveira Moreira da Silva</ion-card-title>
+        <ion-card-subtitle>ADS0304N</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
   </div>
 </ion-content>
